--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "buildGithubIO": "vue-cli-service build --dest='../evifere.lescigales/cocolorico'",    
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
