--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "buildGithubIO": "vue-cli-service build --dest='../evifere.lescigales/cocolorico'",    
+    "buildGithubIO": "vue-cli-service build --dest='../evifere.lescigales/cocolorico'",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -20,6 +20,7 @@
     "element-theme-chalk": "^2.10.1",
     "fabric": "^2.7.0",
     "fontfaceobserver": "^2.1.0",
+    "vue-mq": "^1.0.1",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
